--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="blueApp">#16aaff</color>
     <color name="greenApp">#3de150</color>
+    <color name="lightGray">#d3d3d3</color>
 </resources>
